static_production/css/base.css
@import 'https://fonts.googleapis.com/css?family=Open Sans:300,400,500';
/* Basic definitons */

html, body {
}

body {
    margin: auto;
    padding: 0 8px;

    max-width: 70em;

    font-family: "Open Sans", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, Arial, sans-serif;
    color: #555555;
    background-color: #fff;
    font-weight: 300;
}

strong {
    color: #333;
}

/* Site-wide definitions */
.header {
    color: #e64c00;
    /* color: #286C3E; */
    text-shadow: 1px 1px 3px rgba(0.5, 0.5, 0.5, 0.10);
    margin: 25px 0 10px;
    font-size: 26px;
    font-weight: 500;
}

@media screen and (max-width: 1000px) {
    .header {
        margin-top: 15px;
    }
}

/* Map */

#pointmap {
    height: 500px;
}

@media screen and (max-width: 1000px) {
    #pointmap {
        height: 400px;
        margin: 0 -8px;
    }
}

/* Footer */
footer {
    bottom: 0;
    left: 0;
    width: 100%;
    max-height: 32px;
    z-index: 9001;
    opacity: 0.1;
}

.footer-right {
    float: right;
}

/* Information */
.point-info-container {
    display: flex;
    flex-wrap: wrap;
    max-width: 960px;
    margin: 0 auto;
}

.point-info {
    flex-grow: 1;
    min-width: 0;
    max-width: 480px;
}

.point-properties__header {
    margin-bottom: 0;
}

@media screen and (max-width: 1000px) {
    .point-properties__header {
        margin-bottom: 5px;
    }
}

.point-properties__table {
    display: table;
    border-spacing: 30px 16px;
    margin-left: -30px;
}

.point-properties__row {
    display: table-row;
    margin-right: 20px;
}

.point-properties__col {
    display: table-cell;
}

.point-comment__text {
    max-width: 500px;
}

